# openalex-mcp

./: .env.example  .gitignore  README.md  documento.md  pyproject.toml  setup_mcp.py
openalex-researcher/: SKILL.md
openalex-researcher/references/: filter-syntax.md  output-reference.md  workflow-examples.md
src/openalex_mcp/: __init__.py  cli.py  cli_output.py  client.py  config.py  exceptions.py  formatters.py  server.py
src/openalex_mcp/resources/: __init__.py  filter_guide.py
src/openalex_mcp/tools/: __init__.py  aggregate.py  authors.py  institutions.py  sources.py  works.py
tests/: test_formatters.py
