[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openalex-mcp"
version = "0.1.0"
description = "MCP server for the OpenAlex open scholarly database — works, authors, institutions, sources and more"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "openalex", "academic", "research", "model-context-protocol", "scholarly"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.0.0",
]

[project.scripts]
openalex-mcp = "openalex_mcp.server:main"

[project.urls]
Homepage = "https://github.com/JOSETRA44/openalex-mcp"
Repository = "https://github.com/JOSETRA44/openalex-mcp"
Issues = "https://github.com/JOSETRA44/openalex-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openalex_mcp"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
